css/popup.css
/* ... */
.status-list .breakpoint {
	height: 48px;
	text-align: center;
	letter-spacing: 2px;
	font: 13px Calibri, "Calibri for PREFiX";
	line-height: 48px;
	background: url('/images/status-bg.png') repeat;
}
#user-profile li {
	padding: 8px 10px;
}
#user-profile li:first-of-type {
	box-shadow: none;
}
#user-profile p {
	margin: 0;
	line-height: 150%;
}
#name-avatar p {
	height: 24px;
	line-height: 24px;
}
#relationship {
	opacity: .5;
	transition: opacity .4s;
}
#relationship:hover {
	opacity: 1;
	cursor: pointer;
}
#loading {
	width: 100vw;
	height: 60px;
	position: relative;
}
#loading ul {
	position: absolute;
	top: 50%;
	left: 50%;
	height: 15px;
	transform: translate(-50%, -10px);
	margin: 0;
	padding: 0 0 10px 0;
}
#loading li {
	display: inline-block;
	height: 15px;
	width: 5px;
	box-shadow: 0 0 3px #999;
	border-radius: 1px;
	margin: 0 5px 0 0;
	list-style: none;
	float: left;
}
#loading li {
	animation: loading-animation 1s linear infinite;
}
#loading li:nth-child(2) {
  animation-delay: 150ms;
}
#loading li:nth-child(3) {
  animation-delay: 300ms;
}
#loading li:nth-child(4) {
  animation-delay: 450ms;
}
#loading li:nth-child(5) {
  animation-delay: 600ms;
}
.atwho-view {
    position: absolute;
    top: 0;
    left: 0;
    display: none;
    margin-top: 18px;
    background-color: rgba(255, 255, 255, .95);
    border-radius: 3px;
    box-shadow: 0px 2px 6px rgba(0, 0, 0, .3);
    min-width: 120px;
    z-index: 110;
}
.atwho-view .cur {
    background: #ccc;
}
.atwho-view strong {
    color: #000;
    border-bottom: 1px solid #06c;
}
.atwho-view .cur strong {
    color: #000;
    font-weight: bold;
}
.atwho-view ul {
    list-style:none;
    padding: 0;
    margin: auto;
}
.atwho-view ul li {
    display: block;
    padding: 6px;
    border-bottom: 1px solid #e5e5e5;
    cursor: pointer;
	line-height: 24px;
	text-overflow: ellipsis;
	overflow: hidden;
	color: #000;
}
.atwho-view ul li:nth-child(1) {
	border-top-left-radius: 3px;
	border-top-right-radius: 3px;
}
.atwho-view ul li:last-child {
	border-bottom: 0;
	border-bottom-left-radius: 3px;
	border-bottom-right-radius: 3px;
}

